--- a/app/src/main/res/layout-land/content_course.xml
+++ b/app/src/main/res/layout-land/content_course.xml
@@ -2,152 +2,173 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/course_details_section_height"
+    android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="@dimen/activity_margin_small"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".ui.CourseActivity">
 
-    <TextView
-        android:id="@+id/course_text_name"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="@dimen/text_size_title"
-        tools:text="Course Name" />
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="vertical">
 
         <TextView
-            android:id="@+id/course_term"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/indent_size"
-            android:layout_marginTop="@dimen/text_line_spacing"
-            android:textSize="@dimen/text_size_standard"
-            tools:text="Term" />
-
-        <TextView
-            android:id="@+id/course_text_status"
+            android:id="@+id/course_text_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/indent_size"
-            android:layout_marginTop="@dimen/text_line_spacing"
-            android:textSize="@dimen/text_size_standard"
-            tools:text="Course Status" />
+            android:textSize="@dimen/text_size_title"
+            tools:text="Course Name" />
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/indent_size"
-            android:layout_marginTop="@dimen/text_line_spacing"
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/course_text_start"
+                android:id="@+id/course_term"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="@dimen/activity_horizontal_margin"
+                android:layout_marginStart="@dimen/indent_size"
+                android:layout_marginTop="@dimen/text_line_spacing"
                 android:textSize="@dimen/text_size_standard"
-                tools:text="Start Date" />
+                tools:text="Term" />
 
             <TextView
-                android:id="@+id/course_text_end"
-                android:layout_width="wrap_content"
+                android:id="@+id/course_text_status"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/indent_size"
+                android:layout_marginTop="@dimen/text_line_spacing"
                 android:textSize="@dimen/text_size_standard"
-                tools:text="End Date" />
+                tools:text="Course Status" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/indent_size"
+                android:layout_marginTop="@dimen/text_line_spacing"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/course_text_start"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
+                    android:textSize="@dimen/text_size_standard"
+                    tools:text="Start Date" />
+
+                <TextView
+                    android:id="@+id/course_text_end"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="@dimen/text_size_standard"
+                    tools:text="End Date" />
+            </LinearLayout>
         </LinearLayout>
-    </LinearLayout>
-
-    <TextView
-        android:id="@+id/course_text_mentor_heading"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/text_line_spacing"
-        android:text="@string/course_mentor"
-        android:textSize="@dimen/text_size_subtitle" />
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/text_line_spacing"
-        android:gravity="center_vertical"
-        android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/course_text_mentor_name"
+            android:id="@+id/course_text_mentor_heading"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/indent_size"
-            android:textSize="@dimen/text_size_standard"
-            tools:text="Mentor Name" />
+            android:layout_marginTop="@dimen/text_line_spacing"
+            android:text="@string/course_mentor"
+            android:textSize="@dimen/text_size_subtitle" />
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/indent_size">
-
-            <ImageView
-                android:id="@+id/course_mentor_email_icon"
-                android:layout_width="@dimen/mentor_icon_size"
-                android:layout_height="@dimen/mentor_icon_size"
-                android:layout_gravity="center_vertical"
-                android:layout_marginEnd="@dimen/text_line_spacing"
-                android:onClick="handleMentorEmailClick"
-                android:src="@drawable/ic_email" />
+            android:layout_marginTop="@dimen/text_line_spacing"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/course_text_mentor_email"
+                android:id="@+id/course_text_mentor_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:onClick="handleMentorEmailClick"
+                android:layout_marginStart="@dimen/indent_size"
                 android:textSize="@dimen/text_size_standard"
-                tools:text="Mentor Email" />
+                tools:text="Mentor Name" />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/indent_size">
+
+                <ImageView
+                    android:id="@+id/course_mentor_email_icon"
+                    android:layout_width="@dimen/mentor_icon_size"
+                    android:layout_height="@dimen/mentor_icon_size"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginEnd="@dimen/text_line_spacing"
+                    android:onClick="handleMentorEmailClick"
+                    android:src="@drawable/ic_email" />
+
+                <TextView
+                    android:id="@+id/course_text_mentor_email"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:onClick="handleMentorEmailClick"
+                    android:textSize="@dimen/text_size_standard"
+                    tools:text="Mentor Email" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/indent_size">
+
+                <ImageView
+                    android:id="@+id/course_mentor_phone_icon"
+                    android:layout_width="@dimen/mentor_icon_size"
+                    android:layout_height="@dimen/mentor_icon_size"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginEnd="@dimen/text_line_spacing"
+                    android:onClick="handleMentorPhoneClick"
+                    android:src="@drawable/ic_phone" />
+
+                <TextView
+                    android:id="@+id/course_text_mentor_phone"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:onClick="handleMentorPhoneClick"
+                    android:textSize="@dimen/text_size_standard"
+                    tools:text="Mentor Phone" />
+            </LinearLayout>
         </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="wrap_content"
+        <View
+            android:id="@+id/divider"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginTop="@dimen/activity_margin_small"
+            android:background="?android:attr/listDivider" />
+
+        <TextView
+            android:id="@+id/course_assessments"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/indent_size">
-
-            <ImageView
-                android:id="@+id/course_mentor_phone_icon"
-                android:layout_width="@dimen/mentor_icon_size"
-                android:layout_height="@dimen/mentor_icon_size"
-                android:layout_gravity="center_vertical"
-                android:layout_marginEnd="@dimen/text_line_spacing"
-                android:onClick="handleMentorPhoneClick"
-                android:src="@drawable/ic_phone" />
-
-            <TextView
-                android:id="@+id/course_text_mentor_phone"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:onClick="handleMentorPhoneClick"
-                android:textSize="@dimen/text_size_standard"
-                tools:text="Mentor Phone" />
-        </LinearLayout>
+            android:layout_marginTop="@dimen/text_line_spacing"
+            android:text="@string/course_assessments"
+            android:textSize="@dimen/text_size_subtitle" />
     </LinearLayout>
 
-    <View
-        android:id="@+id/divider"
+    <FrameLayout
+        android:id="@+id/course_content_fragment"
         android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_marginTop="@dimen/activity_margin_small"
-        android:background="?android:attr/listDivider" />
+        android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/course_assessments"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/text_line_spacing"
-        android:text="@string/course_assessments"
-        android:textSize="@dimen/text_size_subtitle" />
+        <TextView
+            android:id="@+id/no_assessments_message"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical|center_horizontal"
+            android:text="@string/no_assessments_message"
+            android:textAlignment="center"
+            android:visibility="gone" />
 
+    </FrameLayout>
 
 </LinearLayout>
