--- a/app/src/main/res/layout/content_course.xml
+++ b/app/src/main/res/layout/content_course.xml
@@ -2,117 +2,138 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/course_details_section_height"
+    android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="@dimen/activity_margin_small"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".ui.CourseActivity">
 
-    <TextView
-        android:id="@+id/course_text_name"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="@dimen/text_size_title"
-        tools:text="Course Name" />
-
-    <TextView
-        android:id="@+id/course_text_status"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/indent_size"
-        android:layout_marginTop="@dimen/text_line_spacing"
-        android:textSize="@dimen/text_size_standard"
-        tools:text="Course Status" />
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/indent_size"
-        android:layout_marginTop="@dimen/text_line_spacing"
-        android:orientation="horizontal">
+        android:orientation="vertical">
 
         <TextView
-            android:id="@+id/course_text_start"
-            android:layout_width="wrap_content"
+            android:id="@+id/course_text_name"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="@dimen/activity_horizontal_margin"
-            android:textSize="@dimen/text_size_standard"
-            tools:text="Start Date" />
+            android:textSize="@dimen/text_size_title"
+            tools:text="Course Name" />
 
         <TextView
-            android:id="@+id/course_text_end"
+            android:id="@+id/course_text_status"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/indent_size"
+            android:layout_marginTop="@dimen/text_line_spacing"
+            android:textSize="@dimen/text_size_standard"
+            tools:text="Course Status" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/indent_size"
+            android:layout_marginTop="@dimen/text_line_spacing"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/course_text_start"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="@dimen/activity_horizontal_margin"
+                android:textSize="@dimen/text_size_standard"
+                tools:text="Start Date" />
+
+            <TextView
+                android:id="@+id/course_text_end"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/text_size_standard"
+                tools:text="End Date" />
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/course_term"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/indent_size"
+            android:layout_marginTop="@dimen/text_line_spacing"
             android:textSize="@dimen/text_size_standard"
-            tools:text="End Date" />
+            tools:text="Term" />
+
+        <TextView
+            android:id="@+id/course_text_mentor_heading"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/text_line_spacing"
+            android:text="@string/course_mentor"
+            android:textSize="@dimen/text_size_subtitle" />
+
+        <TextView
+            android:id="@+id/course_text_mentor_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/indent_size"
+            android:layout_marginTop="@dimen/text_line_spacing"
+            android:textSize="@dimen/text_size_standard"
+            tools:text="Mentor Name" />
+
+        <TextView
+            android:id="@+id/course_text_mentor_email"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/indent_size"
+            android:layout_marginTop="@dimen/text_line_spacing"
+            android:drawableStart="@drawable/ic_email"
+            android:drawablePadding="@dimen/activity_margin_small"
+            android:gravity="center_vertical"
+            android:onClick="handleMentorEmailClick"
+            android:textSize="@dimen/text_size_standard"
+            tools:text="Mentor Email" />
+
+        <TextView
+            android:id="@+id/course_text_mentor_phone"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/indent_size"
+            android:layout_marginTop="@dimen/text_line_spacing"
+            android:drawableStart="@drawable/ic_phone"
+            android:drawablePadding="@dimen/activity_margin_small"
+            android:gravity="center_vertical"
+            android:onClick="handleMentorPhoneClick"
+            android:textSize="@dimen/text_size_standard"
+            tools:text="Mentor Email" />
+
+        <View
+            android:id="@+id/divider"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginTop="@dimen/activity_margin_small"
+            android:background="?android:attr/listDivider" />
+
+        <TextView
+            android:id="@+id/course_assessments"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/text_line_spacing"
+            android:text="@string/course_assessments"
+            android:textSize="@dimen/text_size_subtitle" />
     </LinearLayout>
 
-    <TextView
-        android:id="@+id/course_term"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/indent_size"
-        android:layout_marginTop="@dimen/text_line_spacing"
-        android:textSize="@dimen/text_size_standard"
-        tools:text="Term" />
-
-    <TextView
-        android:id="@+id/course_text_mentor_heading"
+    <FrameLayout
+        android:id="@+id/course_content_fragment"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/text_line_spacing"
-        android:text="@string/course_mentor"
-        android:textSize="@dimen/text_size_subtitle" />
+        android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/course_text_mentor_name"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/indent_size"
-        android:layout_marginTop="@dimen/text_line_spacing"
-        android:textSize="@dimen/text_size_standard"
-        tools:text="Mentor Name" />
+        <TextView
+            android:id="@+id/no_assessments_message"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical|center_horizontal"
+            android:text="@string/no_assessments_message"
+            android:textAlignment="center"
+            android:visibility="gone" />
 
-    <TextView
-        android:id="@+id/course_text_mentor_email"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/indent_size"
-        android:layout_marginTop="@dimen/text_line_spacing"
-        android:drawableStart="@drawable/ic_email"
-        android:drawablePadding="@dimen/activity_margin_small"
-        android:gravity="center_vertical"
-        android:onClick="handleMentorEmailClick"
-        android:textSize="@dimen/text_size_standard"
-        tools:text="Mentor Email" />
-
-    <TextView
-        android:id="@+id/course_text_mentor_phone"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/indent_size"
-        android:layout_marginTop="@dimen/text_line_spacing"
-        android:drawableStart="@drawable/ic_phone"
-        android:drawablePadding="@dimen/activity_margin_small"
-        android:gravity="center_vertical"
-        android:onClick="handleMentorPhoneClick"
-        android:textSize="@dimen/text_size_standard"
-        tools:text="Mentor Email" />
-
-    <View
-        android:id="@+id/divider"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_marginTop="@dimen/activity_margin_small"
-        android:background="?android:attr/listDivider" />
-
-    <TextView
-        android:id="@+id/course_assessments"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/text_line_spacing"
-        android:text="@string/course_assessments"
-        android:textSize="@dimen/text_size_subtitle" />
-
+    </FrameLayout>
 
 </LinearLayout>
