--- a/app/src/main/res/layout/content_term.xml
+++ b/app/src/main/res/layout/content_term.xml
@@ -2,65 +2,85 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/term_details_section_height"
+    android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="@dimen/activity_margin_small"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".ui.TermActivity">
 
-    <TextView
-        android:id="@+id/term_text_name"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="@dimen/text_size_title"
-        tools:text="Term Name" />
-
-    <TextView
-        android:id="@+id/term_text_status"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/text_line_spacing"
-        android:layout_marginStart="@dimen/indent_size"
-        android:textSize="@dimen/text_size_standard"
-        tools:text="Term Status" />
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/indent_size"
-        android:layout_marginTop="@dimen/text_line_spacing"
-        android:orientation="horizontal">
+        android:orientation="vertical">
 
         <TextView
-            android:id="@+id/term_text_start"
-            android:layout_width="wrap_content"
+            android:id="@+id/term_text_name"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="@dimen/activity_horizontal_margin"
-            android:textSize="@dimen/text_size_standard"
-            tools:text="Start Date" />
+            android:textSize="@dimen/text_size_title"
+            tools:text="Term Name" />
 
         <TextView
-            android:id="@+id/term_text_end"
-            android:layout_width="wrap_content"
+            android:id="@+id/term_text_status"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/indent_size"
+            android:layout_marginTop="@dimen/text_line_spacing"
             android:textSize="@dimen/text_size_standard"
-            tools:text="End Date" />
+            tools:text="Term Status" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/indent_size"
+            android:layout_marginTop="@dimen/text_line_spacing"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/term_text_start"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="@dimen/activity_horizontal_margin"
+                android:textSize="@dimen/text_size_standard"
+                tools:text="Start Date" />
+
+            <TextView
+                android:id="@+id/term_text_end"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/text_size_standard"
+                tools:text="End Date" />
+        </LinearLayout>
+
+
+        <View
+            android:id="@+id/divider"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginTop="@dimen/activity_margin_small"
+            android:background="?android:attr/listDivider" />
+
+        <TextView
+            android:id="@+id/term_courses"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/text_line_spacing"
+            android:text="@string/term_courses"
+            android:textSize="@dimen/text_size_subtitle" />
     </LinearLayout>
 
-    <View
-        android:id="@+id/divider"
+    <FrameLayout
+        android:id="@+id/term_content_fragment"
         android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_marginTop="@dimen/activity_margin_small"
-        android:background="?android:attr/listDivider" />
+        android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/term_courses"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/text_line_spacing"
-        android:text="@string/term_courses"
-        android:textSize="@dimen/text_size_subtitle" />
-
-
+        <TextView
+            android:id="@+id/no_main_message"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical|center_horizontal"
+            android:text="@string/no_courses_message"
+            android:textAlignment="center"
+            android:visibility="gone" />
+    </FrameLayout>
 </LinearLayout>
